# BibliotekaNumeryczna

./: BibliotekaNumeryczna.cpp  CMakeLists.txt  README.md
example/: AproksymacjaPrzyklad.cpp  RownaniaRozniczkowePrzyklad.cpp
include/: Interpolacja.h  RownaniaLiniowe.h
include/numlib/: Aproksymacja.h  Calkowanie.h  Interpolacja.h  RownaniaLiniowe.h  RownaniaNieLiniowe.h  RownaniaRozniczkowe.h
src/: Aproksymacja.cpp  Calkowanie.cpp  Interpolacja.cpp  RownaniaLiniowe.cpp  RownaniaNieLiniowe.cpp  RownaniaRozniczkowe.cpp
tests/: AproksymacjaTest.cpp  CalkowanieTest.cpp  InterpolacjaTest.cpp  RownaniaLinioweTest.cpp  RownaniaNieLinioweTest.cpp  RownaniaRozniczkoweTest.cpp
